--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Rojina Sapkota
 
 # Short bio or description (displayed in the header)
-description: Welcome to my Bioinformatics and Comp Bio Blog!!!
+description: Welcome to my Bioinformatics and Comp Bio Blog!!!\n I post stuff that I think is useful for me look back to and also helpful for other beginner Bioinformaticians.Lets make the Journey Exciting!!!
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
