--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Rojina Sapkota
+name: Rojina Sapkotaaa
 
 # Short bio or description (displayed in the header)
 description: Welcome to my Bioinformatics and Comp Bio Blog!!!\n I post stuff that I think is useful for me look back to and also helpful for other beginner Bioinformaticians.Lets make the Journey Exciting!!!
