--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,15 @@
 #
 # This file contains configuration flags to customize your site
 #
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TNHE0S4BHL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TNHE0S4BHL');
+</script>
 
 # Name of your site (displayed in the header)
 name: Rojina Sapkotaaa
@@ -18,15 +27,15 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: rojina.sapko@gmail.com
   facebook:
   flickr:
-  github: RojinaSk/Rojina_blog
+  github: /RojinaSk
   instagram:
   linkedin:
   pinterest:
-  rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  rss: bioinfoverse
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
