--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,9 @@
 name: Rojina Sapkotaaa
 
 # Short bio or description (displayed in the header)
-description: Welcome to my Bioinformatics and Comp Bio Blog!!!\n I post stuff that I think is useful for me look back to and also helpful for other beginner Bioinformaticians.Lets make the Journey Exciting!!!
+description: Welcome to my Bioinformatics and Comp Bio Blog!!!
+I post stuff that I think is useful for me look back to and also helpful for other beginner Bioinformaticians.
+Lets make the Journey Exciting!!!
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/RojinaSk/master/images/headshot.png
@@ -48,7 +50,7 @@ url:
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/Rojina_blog"
+baseurl: "/Rojina_blog.github.io"
 
 #
 # !! You don't need to change any of the configuration flags below !!
