--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ avatar: https://raw.githubusercontent.com/RojinaSk/master/images/headshot.png
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: rojina.sapko@gmail.com
+  email: "rojina.sapko@gmail.com"
   facebook:
   flickr:
   github: /RojinaSk
@@ -44,10 +44,10 @@ google_analytics: G-TNHE0S4BHL
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: "https://Rojina_Blog.github.io"
 
 # If you're hosting your site at a Project repository on GitHub pages
-# (http://yourusername.github.io/repository-name)
+#(http://RojinaSk.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
 baseurl: "/Rojina_Blog.github.io"
