--- a/_config.yml
+++ b/_config.yml
@@ -44,13 +44,13 @@ google_analytics: G-TNHE0S4BHL
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-#url: "https://Rojina_Blog.github.io"
+url: "https://RojinaSk/Rojina_Blog.github.io"
 
 # If you're hosting your site at a Project repository on GitHub pages
 #(http://RojinaSk.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-#baseurl: "/Rojina_Blog.github.io"
+baseurl: "/Rojina_Blog.github.io"
 
 #
 # !! You don't need to change any of the configuration flags below !!
