--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ name: Rojina Sapkota
 description: Welcome to my Bioinformatics and Comp Bio Blog!!!I post stuff that I think is useful for me look back to and also helpful for other beginner Bioinformaticians.Lets make the Journey Exciting!!!
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/RojinaSk/master/images/headshot.png
+avatar: https://github.com/RojinaSk/RojinaSk.github.io/images/headshot.jpeg
 
 #
 # Flags below are optional
