--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,12 @@
 name: Rojina Sapkota
 
 # Short bio or description (displayed in the header)
-description: Welcome to my Bioinformatics and Comp Bio Blog!!!I post stuff that I think is useful for me look back to and also helpful for other beginner Bioinformaticians.Lets make the Journey Exciting!!!
-
+description: >
+  Welcome to my Bioinformatics and Comp Bio Blog!
+  I post stuff that I think is useful for me to look back at and also helpful for other beginner Bioinformaticians.
+  Let's make the journey exciting!
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/RojinaSk/RojinaSk.github.io/images/headshot.jpeg
+avatar: https://raw.githubusercontent.com/RojinaSk/RojinaSk.github.io/master/images/headshot.jpeg
 
 #
 # Flags below are optional
@@ -18,37 +20,27 @@ avatar: https://github.com/RojinaSk/RojinaSk.github.io/images/headshot.jpeg
 
 # Includes an icon in the footer for each username you enter
 footer-links:
-  dribbble:
   email: "rojina.sapko@gmail.com"
-  facebook:
-  flickr:
   github: /RojinaSk
-  instagram:
   linkedin:
-  pinterest:
   rss: bioinfoverse
-  twitter: 
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
-  googleplus: # anything in your profile username that comes after plus.google.com/
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
-disqus:
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: G-TNHE0S4BHL
+#google_analytics: G-TNHE0S4BHL
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-#url: "https://RojinaSk.github.io"
+url: "https://RojinaSk.github.io"
 
 # If you're hosting your site at a Project repository on GitHub pages
 #(http://RojinaSk.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "https://github.com/RojinaSk/RojinaSk.github.io"
+baseurl: "/RojinaSk.github.io"
 
 #
 # !! You don't need to change any of the configuration flags below !!
